deployment/admin/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-admin
  namespace: bp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-admin
  template:
    metadata:
      labels:
        app: frontend-admin
    spec:
      containers:
      - name: frontend-admin
        image: localhost:5000/bp-fe-admin:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
