deployment/admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin-service
  namespace: bp-app
spec:
  selector:
    app: frontend-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
